test/success/simple_trait/main.sk
module Main {

class Foo {

}

class Foo2 {

}

trait Bar[T] {
    fn bar(self) -> ()
}

instance Bar[Foo] {
    fn bar(self) -> () {
        assert(True)
    }
}

instance Bar[Foo2] {
    fn bar(self) -> () {
        assert(False)
    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}