test/errors/invalid_instance_member/main.sk
module Main {

class Foo {

}

trait Bar[T] {
    fn bar(self) -> ()
}

instance Bar[Foo] {
    fn bar(self) -> () {

    }

    fn baz() {

    }
}

fn main() {
}

}